<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="activity"
            type="com.hekmatullahamin.friendhub.activities.EditProfileActivity" />

        <variable
            name="viewModel"
            type="com.hekmatullahamin.friendhub.viewmodels.EditProfileViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activities.EditProfileActivity">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/editProfileToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/cancel_button" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/edit_profile_toolbar_title"
                    android:textSize="@dimen/toolbarTextViewSize"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/doneButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:onClick="@{()->activity.updateUserProfile()}"
                    android:text="@string/done_button" />
            </LinearLayout>
        </com.google.android.material.appbar.MaterialToolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="@dimen/cardElevation">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <de.hdodenhof.circleimageview.CircleImageView
                            loadProfileImage="@{viewModel.currentUser.userProfile}"
                            android:layout_width="@dimen/profilePictureWidthAndHeight"
                            android:layout_height="@dimen/profilePictureWidthAndHeight"
                            android:src="@drawable/profile_placeholder" />

                        <ImageButton
                            android:id="@+id/addProfilePictureButton"
                            android:layout_width="@dimen/profilePictureEndImageWidthAndHeight"
                            android:layout_height="@dimen/profilePictureEndImageWidthAndHeight"
                            android:layout_gravity="end|bottom"
                            android:layout_margin="10dp"
                            android:background="@android:color/transparent"
                            android:onClick="@{()->activity.takePermissionToAccessGallery()}"
                            android:src="@drawable/camera" />
                    </FrameLayout>
                </com.google.android.material.card.MaterialCardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/screenPadding">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="5">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/user_name_label"
                            android:textSize="@dimen/toolbarTextViewSize" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:hint="@string/user_name_hint">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/userNameET"
                                setText="@{viewModel.currentUser.userName}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorOnBackground" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/viewsMarginTop"
                        android:orientation="horizontal"
                        android:weightSum="5">

                        <TextView
                            android:id="@+id/userBioLabel"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/user_bio_label"
                            android:textSize="@dimen/toolbarTextViewSize" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/userBioTextInputLayout"
                            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:hint="@string/user_bio_hint">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/userBioET"
                                setText="@{viewModel.currentUser.userBio}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/colorOnBackground" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>