<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.hekmatullahamin.friendhub.fragments.AddPostFragment" />

        <variable
            name="viewModel"
            type="com.hekmatullahamin.friendhub.viewmodels.HubViewModel" />

        <variable
            name="imageUri"
            type="android.net.Uri" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".fragments.AddPostFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/addPostToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/toolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/add_post_toolbar_title"
                    android:textSize="@dimen/toolbarTextViewSize"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/shareButton"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_gravity="end"
                    android:onClick="@{()->fragment.sharePost()}"
                    android:text="@string/share_button" />
            </RelativeLayout>
        </com.google.android.material.appbar.MaterialToolbar>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/horizontalLineWidth"
            android:src="@drawable/custom_horizontal_line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/addPostLayoutPadding">

            <ImageView
                android:id="@+id/postImageView"
                loadImage="@{viewModel.newPost}"
                android:layout_width="@dimen/addPostImageWidthAndHeight"
                android:layout_height="@dimen/addPostImageWidthAndHeight" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/postImageView"
                app:boxBackgroundMode="none"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postCaption"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/post_caption_hint" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>
    </LinearLayout>
</layout>